<resources>
    <string name="app_name">Route E-Commerce</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="wishlist">Wishlist</string>
    <string name="profile">Profile</string>
    <string name="what_do_you_search_for">what do you search for?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_full_name">Your full name</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="password">Password</string>
    <string name="your_mobile_number">Your Mobile Number</string>
    <string name="your_address">Your Addresses</string>
    <string name="phone_num">01159732150</string>
    <string name="masr_el_gdeda_street_9">Masr EL Gdeda,street 9,</string>
    <string name="_01159732150">01159732150</string>
    <string name="nike_air_jordon">Nike Air Jordon</string>
    <string name="black_color">Black color</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="egp_1_500">EGP 1,500</string>
    <string name="egp_1_200">EGP 1,200</string>
    <string name="total_price">Total price</string>
    <string name="cart">Cart</string>
    <string name="something_went_wrong">Something Went Wrong,\nPlease check your internet connection.</string>
    <string name="try_again">Try Again</string>
    <string name="shop_now">Shop Now</string>
    <string name="subcategory">Subcategory</string>
    <string name="most_selling_products">Most Selling Products</string>
    <string name="review">Review</string>
    <string name="electronics">Electronics</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">E-mail address</string>
    <string name="sign_up">Sign up</string>
    <string name="g_don_t_have_an_account_sign_up">Don\'t have an account? sign up</string>
    <string name="g_do_you_have_an_account_sign_in">Do you have an account? sign in</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="welcome_Back_to_route">Welcome Back To Route</string>
    <string name="user">user</string>
    <string name="sign_in_with_your_mail">Please sign in with your mail</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_product_found_message">No products founded in this category</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="product_details">Product Details</string>
    <string name="sold">Sold</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="colors">Colors</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort by</string>
    <string name="price_low_to_high">Price: Low to High</string>
    <string name="price_high_to_low">Price: High to Low</string>
    <string name="customer_review">Customer Review</string>
    <string name="cancel">Cancel</string>
    <string name="show_result">Show result</string>
    <string name="brands">Brands</string>
    <string name="subcategories">Subcategories</string>
    <string name="subcategory_filter">Subcategory: %1$s</string>
    <string name="brandFilter">Brand: %1$s</string>
    <string name="sort_by_filter">Sort by: %1$s</string>
    <string name="welcome">Welcome, %1$s</string>
    <string name="egp">EGP %1$s</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_new_address">Add new address</string>
    <string name="address">Address: </string>
    <string name="address_details">"Address details: "</string>
    <string name="city">"City: "</string>
    <string name="add">Add</string>
    <string name="select_city">Select city</string>
    <string name="you_didn_t_add_any_addresses_yet">You didn\'t add any addresses yet</string>
    <string name="change_password">Change Password</string>
    <string name="update">Update</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="you_don_t_have_any_wished_items_yet">You don\'t have any wished items yet</string>
    <string name="check_out">Check Out</string>
    <string name="nothing_in_the_cart_yet">Nothing in the cart yet</string>
    <string name="no_result">No result</string>
    <string name="online_payment">Online Payment</string>
    <string name="coming_soon">Coming Soon…</string>
    <string name="cash">Cash</string>
    <string name="select_your_address">Select your Address…</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_confirmed_successfully_please_check_your_email">Order confirmed successfully\nPlease check your email</string>
    <string name="send_code">Send code</string>
    <string name="enter_the_reset_code">Enter the reset code</string>
    <string name="resend_the_code">Resend the code…</string>
    <string name="resend">Resend.</string>
    <string name="verify">Verify</string>
    <string name="failed_to_send_the_code_please_try_again_later">Failed to send the code\nPlease try again later</string>
    <string name="email_sent_successfully">Email sent successfully</string>
    <string name="set_your_new_password">Set your new password</string>
    <string name="something_went_wrong_please_try_again_later_if_this_keep_happening_call_the_support_team">Something went wrong\nPlease try again later\n If this keep happening call the support team.</string>
    <string name="go_back">Go back</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="back_to_login">Back to login</string>
</resources>
