<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.routeEcommerce.ui.userAuthentication.fragments.register.RegisterViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_outside"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        tools:context=".ui.userAuthentication.fragments.register.RegisterFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="350dp"
                    android:layout_height="140dp"
                    android:layout_marginVertical="30dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/logo_white" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_name_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/edit_text_rounded"
                    android:hint="@string/full_name"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:minLines="1"
                    android:padding="8dp"
                    android:textColorHint="@color/gray_110"
                    app:boxStrokeColor="@color/selector_outlined_auth"
                    app:errorEnabled="@{vm.usernameError == null ? false : true}"
                    app:errorMessage="@{vm.usernameError}"
                    app:startIconDrawable="@drawable/ic_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_name_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/enter_your_full_name"
                        android:fontFamily="@font/poppins_regular"
                        android:inputType="text"
                        android:text="@={vm.usernameLiveData}"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_number_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/edit_text_rounded"
                    android:hint="@string/mobile_number"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:minLines="1"
                    android:padding="8dp"
                    android:textColorHint="@color/gray_110"
                    app:boxStrokeColor="@color/selector_outlined_auth"
                    app:errorEnabled="@{vm.phoneError == null ? false : true}"
                    app:errorMessage="@{vm.phoneError}"
                    app:prefixText="+20 "
                    app:startIconDrawable="@drawable/ic_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/enter_your_mobile_number"
                        android:fontFamily="@font/poppins_regular"
                        android:inputType="phone"
                        android:text="@={vm.phoneLiveData}"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/edit_text_rounded"
                    android:hint="@string/email_address"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:minLines="1"
                    android:padding="8dp"
                    android:textColorHint="@color/gray_110"
                    app:boxStrokeColor="@color/selector_outlined_auth"
                    app:errorEnabled="@{vm.emailError == null ? false : true}"
                    app:errorMessage="@{vm.emailError}"
                    app:startIconDrawable="@drawable/ic_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/enter_your_email"
                        android:fontFamily="@font/poppins_regular"
                        android:inputType="textEmailAddress"
                        android:text="@={vm.emailLiveData}"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/new_password_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_rounded"
                        android:hint="@string/password"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="8dp"
                        android:textColorHint="@color/gray_110"
                        app:boxStrokeColor="@color/selector_outlined_auth"
                        app:endIconMode="password_toggle"
                        app:errorEnabled="@{vm.passwordError == null ? false : true}"
                        app:errorMessage="@{vm.passwordError}"
                        app:startIconDrawable="@drawable/ic_lock">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/new_password_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="@string/enter_your_password"
                            android:fontFamily="@font/poppins_regular"
                            android:inputType="textPassword"
                            android:text="@={vm.passwordLiveData}"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirm_password_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_rounded"
                        android:hint="@string/password_confirmation"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="8dp"
                        android:textColorHint="@color/gray_110"
                        app:boxStrokeColor="@color/selector_outlined_auth"
                        app:endIconMode="password_toggle"
                        app:errorEnabled="@{vm.rePasswordError == null ? false : true}"
                        app:errorMessage="@{vm.rePasswordError}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_confirmation_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="@string/password_confirmation"
                            android:fontFamily="@font/poppins_regular"
                            android:inputType="textPassword"
                            android:text="@={vm.rePasswordLiveData}"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/login_do_have_account_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/g_do_you_have_an_account_sign_in"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edit_text_rounded"
                    android:hapticFeedbackEnabled="true"
                    android:padding="18dp">

                    <TextView
                        android:id="@+id/btn_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/sign_up"
                        android:textColor="@color/blue"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ic_next"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="30dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_next"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="30dp"
                        android:indeterminateTint="@color/blue"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>