<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isSubcategoryOpen"
            type="Boolean" />

        <variable
            name="isBrandOpen"
            type="Boolean" />

        <variable
            name="isSortingOpen"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.fragments.filter.FiltrationFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/bottom_bar"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/subcategories_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp"
                    app:contentPadding="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@color/rv_bg"
                    app:strokeWidth="0.8dp">

                    <TextView
                        android:id="@+id/subcategory_title"
                        style="@style/HeaderText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@{isSubcategoryOpen == true ? @drawable/ic_arrow_up : @drawable/ic_arrow_down}"
                        android:text="@string/subcategories"
                        android:textColor="@color/dark_blue" />
                </com.google.android.material.card.MaterialCardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/subcategories_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/subcategories_section"
                    app:spanCount="3"
                    tools:listitem="@layout/item_filter" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/brands_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp"
                    app:contentPadding="8dp"
                    app:layout_constraintTop_toBottomOf="@id/subcategories_rv"
                    app:strokeColor="@color/rv_bg"
                    app:strokeWidth="0.8dp">

                    <TextView
                        android:id="@+id/brand_title"
                        style="@style/HeaderText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@{isBrandOpen == true ? @drawable/ic_arrow_up : @drawable/ic_arrow_down}"
                        android:text="@string/brands"
                        android:textColor="@color/dark_blue" />
                </com.google.android.material.card.MaterialCardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/brands_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/brands_section"
                    app:spanCount="3"
                    tools:listitem="@layout/item_filter" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/sort_by_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp"
                    app:contentPadding="8dp"
                    app:layout_constraintTop_toBottomOf="@id/brands_rv"
                    app:strokeColor="@color/rv_bg"
                    app:strokeWidth="0.8dp">

                    <TextView
                        android:id="@+id/sort_by_title"
                        style="@style/HeaderText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@{isSortingOpen == true ? @drawable/ic_arrow_up : @drawable/ic_arrow_down}"
                        android:text="@string/sort_by"
                        android:textColor="@color/dark_blue" />
                </com.google.android.material.card.MaterialCardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/sort_by_section">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_sort_by_price_asc"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/price_low_to_high"
                        android:textColor="@color/gray"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/blue"
                        app:strokeWidth="1dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_sort_by_price_des"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/price_high_to_low"
                        android:textColor="@color/gray"
                        app:layout_constraintStart_toEndOf="@id/btn_sort_by_price_asc"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/blue"
                        app:strokeWidth="1dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_sort_by_rating"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/customer_review"
                        android:textColor="@color/gray"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_sort_by_price_asc"
                        app:strokeColor="@color/blue"
                        app:strokeWidth="1dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:contentPadding="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel_filter"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:backgroundTint="@color/white"
                android:text="@string/cancel"
                android:textColor="@color/blue"
                app:strokeColor="@color/rv_bg"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_show_result"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:backgroundTint="@color/blue"
                android:text="@string/show_result"
                android:textColor="@color/white"
                app:cornerRadius="16dp" />
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>