<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="address"
            type="com.route.domain.models.Address" />

        <variable
            name="isSelected"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:contentPaddingBottom="6dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@{isSelected == true ? @color/blue : @color/blue30}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@{address.name}"
                    android:textColor="@color/pale_blue"
                    android:textSize="16sp"
                    tools:text="@string/what_do_you_search_for" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="horizontal">


                    <TextView
                        style="@style/GeneralText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address_details"
                        android:textColor="@color/blue30" />

                    <TextView
                        style="@style/GeneralText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{address.details}"
                        android:textColor="@color/blue30"
                        tools:text="Work" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="horizontal">


                    <TextView
                        style="@style/GeneralText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:textColor="@color/blue30" />

                    <TextView
                        style="@style/GeneralText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{address.city}"
                        android:textColor="@color/blue30"
                        tools:text="Work" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="horizontal">


                    <TextView
                        style="@style/GeneralText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_number"
                        android:textColor="@color/blue30" />

                    <TextView
                        style="@style/GeneralText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{address.phone}"
                        android:textColor="@color/blue30"
                        tools:text="Work" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <CheckBox
            android:id="@+id/select_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:checked="@{isSelected}"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>